WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222979
REGRESSION (
r273003
): Animated style may lose original display property value
https://bugs.webkit.org/show_bug.cgi?id=222979
Summary
REGRESSION (r273003): Animated style may lose original display property value
Antti Koivisto
Reported
2021-03-09 08:35:18 PST
We need pre-blockification display value in some cases.
Attachments
wip
(9.15 KB, patch)
2021-03-09 08:35 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(11.68 KB, patch)
2021-03-09 10:03 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-03-09 08:35:41 PST
Created
attachment 422704
[details]
wip
Antti Koivisto
Comment 2
2021-03-09 08:37:47 PST
rdar://75056684
Antti Koivisto
Comment 3
2021-03-09 10:03:42 PST
Created
attachment 422721
[details]
patch
EWS
Comment 4
2021-03-09 13:17:48 PST
Committed
r274170
: <
https://commits.webkit.org/r274170
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422721
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug