Source/WebCore/style/StyleAdjuster.cpp
@@ -243,9 +243,6 @@ OptionSet<EventListenerRegionType> Adjuster::computeEventListenerRegionTypes(con
 
 void Adjuster::adjust(RenderStyle& style, const RenderStyle* userAgentAppearanceStyle) const
 {
-    // Cache our original display.
-    style.setOriginalDisplay(style.display());
-
     if (style.display() == DisplayType::Contents)
         adjustDisplayContentsStyle(style);
 
@@ -257,10 +254,10 @@ void Adjuster::adjust(RenderStyle& style, const RenderStyle* userAgentAppearance
             // these tags to retain their display types.
             if (m_document.inQuirksMode()) {
                 if (m_element->hasTagName(tdTag)) {
-                    style.setDisplay(DisplayType::TableCell);
+                    style.setEffectiveDisplay(DisplayType::TableCell);
                     style.setFloating(Float::No);
                 } else if (is<HTMLTableElement>(*m_element))
-                    style.setDisplay(style.isDisplayInlineType() ? DisplayType::InlineTable : DisplayType::Table);
+                    style.setEffectiveDisplay(style.isDisplayInlineType() ? DisplayType::InlineTable : DisplayType::Table);
             }
 
             if (m_element->hasTagName(tdTag) || m_element->hasTagName(thTag)) {
@@ -283,7 +280,7 @@ void Adjuster::adjust(RenderStyle& style, const RenderStyle* userAgentAppearance
             // fix a crash where a site tries to position these objects. They also never honor display.
             if (m_element->hasTagName(frameTag) || m_element->hasTagName(framesetTag)) {
                 style.setPosition(PositionType::Static);
-                style.setDisplay(DisplayType::Block);
+                style.setEffectiveDisplay(DisplayType::Block);
             }
 
             // Ruby text does not support float or position. This might change with evolution of the specification.
@@ -300,17 +297,17 @@ void Adjuster::adjust(RenderStyle& style, const RenderStyle* userAgentAppearance
                 style.setTextAlign(TextAlignMode::Center);
 
             if (m_element->hasTagName(legendTag))
-                style.setDisplay(DisplayType::Block);
+                style.setEffectiveDisplay(DisplayType::Block);
         }
 
         // Absolute/fixed positioned elements, floating elements and the document element need block-like outside display.
         if (style.hasOutOfFlowPosition() || style.isFloating() || (m_element && m_document.documentElement() == m_element))
-            style.setDisplay(equivalentBlockDisplay(style, m_document));
+            style.setEffectiveDisplay(equivalentBlockDisplay(style, m_document));
 
         // FIXME: Don't support this mutation for pseudo styles like first-letter or first-line, since it's not completely
         // clear how that should work.
         if (style.display() == DisplayType::Inline && style.styleType() == PseudoId::None && style.writingMode() != m_parentStyle.writingMode())
-            style.setDisplay(DisplayType::InlineBlock);
+            style.setEffectiveDisplay(DisplayType::InlineBlock);
 
         // After performing the display mutation, check table rows. We do not honor position:relative or position:sticky on
         // table rows or cells. This has been established for position:relative in CSS2.1 (and caused a crash in containingBlock()
@@ -337,7 +334,7 @@ void Adjuster::adjust(RenderStyle& style, const RenderStyle* userAgentAppearance
         // "A parent with a grid or flex display value blockifies the box’s display type."
         if (m_parentBoxStyle.isDisplayFlexibleOrGridBox()) {
             style.setFloating(Float::No);
-            style.setDisplay(equivalentBlockDisplay(style, m_document));
+            style.setEffectiveDisplay(equivalentBlockDisplay(style, m_document));
         }
     }
 
@@ -544,17 +541,17 @@ void Adjuster::adjustDisplayContentsStyle(RenderStyle& style) const
 {
     if (!m_element) {
         if (style.styleType() != PseudoId::Before && style.styleType() != PseudoId::After)
-            style.setDisplay(DisplayType::None);
+            style.setEffectiveDisplay(DisplayType::None);
         return;
     }
 
     if (m_document.documentElement() == m_element) {
-        style.setDisplay(DisplayType::Block);
+        style.setEffectiveDisplay(DisplayType::Block);
         return;
     }
 
     if (hasEffectiveDisplayNoneForDisplayContents(*m_element))
-        style.setDisplay(DisplayType::None);
+        style.setEffectiveDisplay(DisplayType::None);
 }
 
 void Adjuster::adjustSVGElementStyle(RenderStyle& style, const SVGElement& svgElement)
@@ -571,7 +568,7 @@ void Adjuster::adjustSVGElementStyle(RenderStyle& style, const SVGElement& svgEl
 
     // SVG text layout code expects us to be a block-level style element.
     if ((svgElement.hasTagName(SVGNames::foreignObjectTag) || svgElement.hasTagName(SVGNames::textTag)) && style.isDisplayInlineType())
-        style.setDisplay(DisplayType::Block);
+        style.setEffectiveDisplay(DisplayType::Block);
 }
 
 void Adjuster::adjustAnimatedStyle(RenderStyle& style, OptionSet<AnimationImpact> impact) const
@@ -630,7 +627,7 @@ void Adjuster::adjustForSiteSpecificQuirks(RenderStyle& style) const
             if (div.hasClass() && div.classNames().contains(instreamNativeVideoDivClass)) {
                 auto* video = div.treeScope().getElementById(videoElementID);
                 if (is<HTMLVideoElement>(video) && downcast<HTMLVideoElement>(*video).isFullscreen())
-                    style.setDisplay(DisplayType::Block);
+                    style.setEffectiveDisplay(DisplayType::Block);
             }
         }
     }
